Deployment/kubernetes/destroy/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zipkin
    namespace: jenkins
    labels:
        app: zipkin
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: zipkin
    template:
        metadata:
            labels:
                app: zipkin
        spec:
            containers:
              - name: zipkin
                image: openzipkin/zipkin
                ports:
                  - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
    name: zipkin
    namespace: jenkins
spec:
    selector:
        app: zipkin
    ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
